Updated design, added proper spacing / responsive breakpoints, edit functionality, edit validation, small other fixes

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,6 +1,6 @@
 
 // Body
-$body-bg: #f8fafc;
+$body-bg: #c7d1db;
 
 // Typography
 $font-family-sans-serif: "Nunito", sans-serif;
